# fin-assistant

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  WORK_SUMMARY.md  _kap_2972-0ade349e7e0bede6.js  _kap_5878-72f429b9bddd0f6e.js  _kap_5940-cee04dbe496b6e2e.js  _kap_6278-19fd5ed3fe248c69.js  _kap_6500-400fe88fd3d09e23.js  _kap_company_bim.html  _kap_main.html  _kap_member_filter_bim.json  _kap_page-d8b8829b276df6a2.js  config.yaml  pyproject.toml  requirements.txt  run_ui.ps1  tavhl_sample.txt
.github/workflows/: ci-week16.yml
agents_plan/: AGENTS.md  AGENTS2.md  KAP_PLAN.md
app/: __init__.py  api.py  ui.py  ui_components.py
data/demo/: config.demo.yaml
data/demo_bundle/: demo_questions.txt  (+3 more)
eval/: gold_questions.jsonl  gold_questions_multicompany.jsonl  questions.jsonl  run_eval.py
ragfin/: __init__.py  __main__.py  api.py  cli.py  demo.py  doctor.py  ui.py
scripts/: check_demo_metrics_smoke.py
src/: __init__.py  answer.py  autoverify.py  chunking.py  cli.py  commentary.py  config.py  coverage_audit.py  demo.py  doctor.py  embeddings.py  error_analysis.py  eval_runner.py  index.py  ingest.py  kap_fetcher.py  latency_benchmark.py  metrics.py  metrics_extractor.py  openrouter_client.py  query_parser.py  ratio_engine.py  retrieve.py  validators.py
tests/: test_api.py  test_autoverify.py  test_commentary.py  test_config_dotenv.py  test_demo_packaging.py  test_kap_fetcher.py  test_metrics_extractor.py  test_multi_company.py  test_query_parser.py  test_ratio_engine.py  test_retriever_smoke.py  test_validators.py
(+53 files in other folders)
